--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vertex Leads | B2B Lead Generation</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+  <header class="hero">
+    <h1>Vertex Leads</h1>
+    <p>B2B Lead Generation & Cold Email Specialist</p>
+    <a href="#contact" class="btn">Contact Me</a>
+  </header>
+
+  <section class="section">
+    <h2>Services</h2>
+    <div class="cards">
+      <div class="card">B2B Lead Generation</div>
+      <div class="card">Cold Email Research</div>
+      <div class="card">LinkedIn Prospecting</div>
+      <div class="card">Email Verification</div>
+    </div>
+  </section>
+
+  <section class="section light">
+    <h2>How I Work</h2>
+    <ol class="steps">
+      <li>Understand your target audience</li>
+      <li>Research & collect leads</li>
+      <li>Verify email addresses</li>
+      <li>Deliver in Google Sheets / CSV</li>
+    </ol>
+  </section>
+
+  <section class="section">
+    <h2>Why Choose Me</h2>
+    <ul class="why">
+      <li>Manual & accurate research</li>
+      <li>Fast delivery</li>
+      <li>Beginner-friendly pricing</li>
+      <li>Clear communication</li>
+    </ul>
+  </section>
+
+  <section class="section light" id="contact">
+    <h2>Contact</h2>
+    <p>Ready to get started?</p>
+    <p>Email: <strong>nazmussakibian+biz@gmail.com</strong></p>
+  </section>
+
+  <footer>
+    <p>© 2026 Vertex Leads</p>
+  </footer>
+
+</body>
+</html>
