--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="#contact" class="btn">Contact Me</a>
   </header>
 
-  <section class="section">
+  <section class="section reveal">
     <h2>Services</h2>
     <div class="cards">
       <div class="card">B2B Lead Generation</div>
@@ -34,7 +34,7 @@
     </ol>
   </section>
 
-  <section class="section">
+  <section class="section reveal">
     <h2>Why Choose Me</h2>
     <ul class="why">
       <li>Manual & accurate research</li>
