--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
   </section>
 
   <footer>
-    <p>© 2026 Vertex Leads</p>
+    <p>© <span id="year"></span> Vertex Leads</p>
   </footer>
+
+  <script src="script.js"></script>
 
 </body>
 </html>
