--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </section>
 
   <footer>
-    <p>© <span id="year"></span> Vertex Leads</p>
+    © <span id="year"></span> Vertex Leads
   </footer>
 
   <script src="script.js"></script>
