--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header class="hero">
     <img src="VL-logo.png" alt="Vertex Leads Logo" class="logo">
-    <h1><span class="brand">Vertex Leads</h1>
+    <h1><span class="brand">Vertex Leads</span></h1>
     <p>B2B Lead Generation & Cold Email Specialist</p>
     <a href="#contact" class="btn">Contact Me</a>
   </header>
