--- a/index.html
+++ b/index.html
@@ -45,11 +45,18 @@
     </ul>
   </section>
 
-  <section class="section light" id="contact">
-    <h2>Contact</h2>
-    <p>Ready to get started?</p>
-    <p>Email: <strong>nazmussakibian+biz@gmail.com</strong></p>
-  </section>
+  <section class="section light reveal" id="contact">
+  <div class="contact-container">
+    <img src="Nazmus.png" alt="Nazmus Sakib" class="contact-img">
+    <div class="contact-text">
+      <h2>Contact</h2>
+      <p>Ready to get started?</p>
+      <p>Email: <strong>nazmussakibian+biz@gmail.com</strong></p>
+      <a href="mailto:nazmussakibian+biz@gmail.com" class="btn">Contact Me</a>
+    </div>
+  </div>
+</section>
+
 
   <footer>
     © <span id="year"></span> Vertex Leads
