--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
 
-  <header class="hero">
-    <img src="VL-logocopy.png" alt="Vertex Leads Logo" class="logo">
-    <h1><span class="brand">Vertex Leads</span></h1>
-    <p>B2B Lead Generation & Cold Email Specialist</p>
-    <a href="#contact" class="btn">Contact Me</a>
-  </header>
+ <header class="hero">
+  <img src="VL-logocopy.png" alt="Vertex Leads Logo" class="logo">
+
+  <h1 class="hero-title">
+    <span class="brand">Vertex Leads</span>
+  </h1>
+
+  <p class="hero-tagline" id="typing"></p>
+
+  <a href="#contact" class="btn hero-btn">Contact Me</a>
+</header>
+
 
   <section class="section reveal">
     <h2>Services</h2>
